--- a/templates/home.html
+++ b/templates/home.html
@@ -44,7 +44,7 @@
         <!-- Navbar start -->
         <nav class="navbar h-100 bg-light-lm">
             <div class="container-lg">
-                <a href="https://pelupa.in/">
+                <a href="https://playlistduration.pelupa.in	">
                     <img src="{{url_for('static', path='/logo.png')}}" height="60" alt="YouTube Playlist Length" />
                 </a>
                 <span class="navbar-text text-monospace">
@@ -124,14 +124,14 @@
                 {% endfor %}
             </div>
 
-            <div class="container">
+<!--             <div class="container">
                 <div class="content">
-                    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8874895270666721"
+                    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-"
                          crossorigin="anonymous"></script>
                     <!-- Below form -->
-                    <ins class="adsbygoogle"
+<!--                     <ins class="adsbygoogle"
                          style="display:block"
-                         data-ad-client="ca-pub-8874895270666721"
+                         data-ad-client="ca-pub-8874"
                          data-ad-slot="4571294072"
                          data-ad-format="auto"></ins>
                     <script>
@@ -139,7 +139,7 @@
                     </script>
                     
                 </div>
-            </div>
+            </div> --> -->
 
 
         </div>
@@ -149,7 +149,7 @@
         <!-- Navbar fixed bottom start -->
         <nav class="navbar navbar-fixed-bottom bg-light-lm">
             <div class="footer-content mx-auto">
-                Made with ❤ by <a href="https://www.pelupa.in">Ravi Prakash</a>.
+                Made with ❤ by <a href="https://pelupa.in">Ravi Prakash</a>.
             </div>
         </nav>
         <!-- Navbar fixed bottom end -->
