--- a/templates/home.html
+++ b/templates/home.html
@@ -45,19 +45,16 @@
         <nav class="navbar h-100 bg-light-lm">
             <div class="container-lg">
                 <a href="https://playlistduration.pelupa.in	">
-                    <img src="{{url_for('static', path='/logo.png')}}" height="60" alt="YouTube Playlist Length" />
+                    <img src="{{url_for('static', path='/logo.png')}}" height="111" alt="YouTube Playlist Length" />
                 </a>
-                <span class="navbar-text text-monospace">
-                    <span class="badge badge-danger text-dark-dm text-white-lm"> Ravi</span>
-                </span>
-                <button class="btn btn-lg btn-square ml-auto text-danger" type="button"
+                <button class="btn btn-lg btn-square ml-auto text-white" type="button"
                     onclick="halfmoon.toggleDarkMode()">
                     <i class="fa fa-moon" aria-hidden="true"></i>
                     <span class="sr-only">Toggle dark mode</span>
                 </button>
 
                 <a href="https://github.com/ctrl-ravi">
-                    <button class="btn btn-lg btn-square ml-5 text-danger">
+                    <button class="btn btn-lg btn-square ml-5 text-white">
                         <i class="fab fa-github" aria-hidden="true"></i>
                         <span class="sr-only">Toggle dark mode</span>
                     </button>
