--- a/templates/home.html
+++ b/templates/home.html
@@ -42,7 +42,7 @@
         <div class="sticky-alerts"></div>
 
         <!-- Navbar start -->
-        <nav class="navbar h-100 bg-light-lm">
+        <nav class="navbar h-100 bg-gray-800-dm bg-light-lm">
             <div class="container-lg">
                 <a href="https://playlistduration.pelupa.in	">
                     <img src="{{url_for('static', path='/logo.png')}}" height="111" alt="YouTube Playlist Length" />
