--- a/templates/home.html
+++ b/templates/home.html
@@ -42,19 +42,19 @@
         <div class="sticky-alerts"></div>
 
         <!-- Navbar start -->
-        <nav class="navbar h-100 bg-gray-800-dm bg-light-lm">
+        <nav class="navbar h-100 bg-light-lm"style="background-color: #0f5454;"data-dm-bg-color="#0f5454">
             <div class="container-lg">
                 <a href="https://playlistduration.pelupa.in	">
                     <img src="{{url_for('static', path='/logo.png')}}" height="111" alt="YouTube Playlist Length" />
                 </a>
-                <button class="btn btn-lg btn-square ml-auto text-white" type="button"
+                <button class="btn btn-lg btn-square ml-auto text-white-dm text-black-lm" type="button"
                     onclick="halfmoon.toggleDarkMode()">
                     <i class="fa fa-moon" aria-hidden="true"></i>
                     <span class="sr-only">Toggle dark mode</span>
                 </button>
 
                 <a href="https://github.com/ctrl-ravi">
-                    <button class="btn btn-lg btn-square ml-5 text-white">
+                    <button class="btn btn-lg btn-square ml-5 text-white-dm text-black-lm">
                         <i class="fab fa-github" aria-hidden="true"></i>
                         <span class="sr-only">Toggle dark mode</span>
                     </button>
@@ -144,7 +144,7 @@
 
 
         <!-- Navbar fixed bottom start -->
-        <nav class="navbar navbar-fixed-bottom bg-light-lm">
+        <nav class="navbar navbar-fixed-bottom bg-light-lm"style="background-color: #0f5454;"data-dm-bg-color="#0f5454">
             <div class="footer-content mx-auto">
                 Made with ❤ by <a href="https://pelupa.in">Ravi Prakash</a>.
             </div>
